Fix problem where user could drag passages offscreen.

--- a/css/partials/_base.scss
+++ b/css/partials/_base.scss
@@ -1,7 +1,9 @@
 $radius: 10px;
 $spacing: 2 * $radius;
+
 $shadow: 0.25 * $radius;
 $shadow-blur: $radius;
+$shadow-color: rgba( 0, 0, 0, 0.25 );
 
 $width: 120px;
 
