--- a/css/partials/_footer.scss
+++ b/css/partials/_footer.scss
@@ -19,13 +19,13 @@ footer {
   right: 0;
   top: 0;
 
-  box-shadow: 0 2px 5px rgba( 0, 0, 0, 0.25 );
-  text-shadow: 3px 3px 0 rgba( 0, 0, 0, 0.25 );
+  box-shadow: 0 2px 5px $shadow-color;
+  text-shadow: $shadow $shadow 0 $shadow-color;
 
   @include transition(0.1s ease-out all);
 
   &:hover {
     // background-color: darken($title-color, 10%);
-    text-shadow: 3px 3px 0 rgba( 0, 0, 0, 0.1 ), 0 0 2px white;
+    text-shadow: $shadow $shadow 0 $shadow-color, 0 0 2px white;
   }
 }
