--- a/css/partials/_wmd.scss
+++ b/css/partials/_wmd.scss
@@ -147,7 +147,7 @@
 
 .wmd-prompt-dialog {
   background-color: $passage-color;
-  box-shadow: 0 $shadow $shadow-blur rgba( 0, 0, 0, 0.25 );
+  box-shadow: $shadow $shadow $shadow-blur $shadow-color;
 
   font-family: $serif;
   padding: $spacing;
